non-msrv-tests/tests/ui/field_option_syntax.stderr
error: unexpected option syntax
 --> tests/ui/field_option_syntax.rs:4:7
  |
4 |     #[derive_where = "default"]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^
